fix conversation switching;remove examples in conversation page

--- a/TODO
+++ b/TODO
@@ -1,13 +1,14 @@
-fix conversation switching 
+fix conversation switching (Done)
 fix encryption vs no encryption (Done)
+delete conversation (Done)
 add plot
-remove examples in conversation page
+remove examples in conversation page (Done)
 allow deleting examples
 allow adding manual examples
-change regenerate to generate
+change regenerate to generate (Done)
 add better navigation between connection and chat
 fix number of messages in right pannel
 allow to modify generation prompts
 allow to generate column description using AI
 move training data to database
-fix wrong error message after generating data abd training data     
+fix wrong error message after generating data and training data     
