--- a/TODO
+++ b/TODO
@@ -4,11 +4,14 @@ delete conversation (Done)
 add plot
 remove examples in conversation page (Done)
 allow deleting examples
-allow adding manual examples
+allow adding manual examples 
 change regenerate to generate (Done)
 add better navigation between connection and chat
 fix number of messages in right pannel
-allow to modify generation prompts
-allow to generate column description using AI
-move training data to database
+allow to modify generation prompts 
+allow to generate column description using AI (done)
+move training data to database (done)
 fix wrong error message after generating data and training data     
+add test connection button (done)
+merge schema and description (done)
+delete connection (done)
