fix: resolve training import error and update db session handling
- Fix import error in vanna_service.py by removing problematic get_db import
- Pass database session from background task to training functions
- Update setup_and_train_vanna and _train_vanna_instance to accept db parameter
- Ensure proper database session propagation for training data loading
- Resolves 'cannot import name get_db' error during model training

--- a/TODO
+++ b/TODO
@@ -3,8 +3,8 @@ fix encryption vs no encryption (Done)
 delete conversation (Done)
 add plot
 remove examples in conversation page (Done)
-allow deleting examples
-allow adding manual examples 
+allow deleting examples (done)
+allow adding manual examples (done)
 change regenerate to generate (Done)
 add better navigation between connection and chat
 fix number of messages in right pannel
