--- a/TODO
+++ b/TODO
@@ -7,8 +7,8 @@ allow deleting examples (done)
 allow adding manual examples (done)
 change regenerate to generate (Done)
 add better navigation between connection and chat
-fix number of messages in right pannel
-allow to modify generation prompts 
+fix number of messages in right pannel (Done removed)
+allow to modify generation prompts (ignored)
 allow to generate column description using AI (done)
 move training data to database (done)
 fix wrong error message after generating data and training data     
